--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="about__content-details">
                         <p class="about__content-details-para">
                             Hey! It's
-                            <strong>Ansh sharma</strong>
+                            <strong>Gautam Manak</strong>
                             and I'm a <strong> Frontend Web Developer and Java Developer </strong> located in
                             Meerut , UP.
                            
